# solid_assistant

./: .gitignore  DEPENDENCIES.md  FINAL_SUMMARY.md  README.md  examples.py  examples_generator.py  openapi.yaml  pyproject.toml
app/: main.py
app/api/v1/: interpret.py  parts.py
app/cad/: README.md  __init__.py  builder_interface.py  cadquery_builder.py  generator.py  solidworks_builder.py
app/domain/: intent.py  models.py
app/llm/: interpreter.py
app/rules/: __init__.py
app/services/: part_generator.py
frontend/: IMPLEMENTATION_SUMMARY.md  README.md  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/public/models/: README.md
frontend/src/: App.css  App.tsx
frontend/src/components/: ErrorDisplay.css  ErrorDisplay.tsx  Loading.css  Loading.tsx  Navigation.css  Navigation.tsx  StepViewer.css  StepViewer.tsx
frontend/src/hooks/: useGeneratePart.ts  useInterpret.ts  useStepLoader.ts
frontend/src/pages/: HomePage.css  HomePage.tsx  InterpretPage.css  InterpretPage.tsx  PartsPage.css  PartsPage.tsx  ViewerPage.css  ViewerPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: ErrorDisplay.test.tsx  Loading.test.tsx  Navigation.test.tsx  setup.ts
frontend/src/types/: api.ts  occt-import-js.d.ts
frontend/src/utils/: stepLoader.ts
tests/: test_async_endpoints.py  test_cad_builder.py  test_generator.py  test_part_service.py
