[tool.poetry]
name = "mechanical-assistant"
version = "0.1.0"
description = "FastAPI-based mechanical assistant for CAD part generation from natural language"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.128.0"
uvicorn = {extras = ["standard"], version = "0.40.0"}
pydantic = "2.12.5"
# CadQuery with compatible versions - DO NOT UPGRADE without testing
cadquery = "2.4.0"
cadquery-ocp = ">=7.7.0,<7.8"
numpy = ">=1.20.0,<2.0"  # numpy 2.x breaks nptyping compatibility
nptyping = "2.0.1"
nlopt = ">=2.7.0"  # CadQuery dependency, must support arm64
# LangChain packages
langchain = "1.2.3"
langchain-core = "1.2.6"
langchain-openai = "1.1.7"
langgraph = "1.0.5"
openai = "1.109.1"
# Additional dependencies
tiktoken = "0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
httpx = "0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:cadquery.*",
    "ignore::DeprecationWarning:ezdxf.*",
    "ignore::DeprecationWarning:nptyping.*",
    "ignore::DeprecationWarning:pyparsing.*",
]
